--- a/package.json
+++ b/package.json
@@ -4,21 +4,26 @@
   "description": "Microservices Project Management",
   "main": "index.js",
   "scripts": {
-    "start": "./src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "yarn build && ./dist/index.js",
+    "build": "babel src --out-dir dist",
+    "prepublish": "yarn build"
   },
   "bin": {
     "hydra": "src/index.js"
   },
   "author": "ClementH",
   "license": "MIT",
-  "type": "module",
   "dependencies": {
     "dotenv": "^8.2.0",
     "lodash": "^4.17.15",
     "neo-blessed": "^0.2.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "@babel/cli": "^7.7.7",
+    "@babel/core": "^7.7.7",
+    "@babel/preset-env": "^7.7.7"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/theodo/hydra.git"
