--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   "dependencies": {
     "dotenv": "^8.2.0",
     "lodash": "^4.17.15",
-    "neo-blessed": "^0.2.0"
+    "neo-blessed": "^0.2.0",
+    "node-localstorage": "^2.1.5"
   },
   "devDependencies": {
     "@babel/cli": "^7.7.7",
